<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MonthWorkActivity">

    <LinearLayout
        android:id="@+id/header_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <me.grantland.widget.AutofitTextView
            android:id="@+id/header_day_textView"
            android:layout_width="@dimen/zero_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/month_worksheet_padding"
            android:text="@string/day_column"
            android:layout_weight="1.5"
            android:textColor="@color/colorWhite"
            android:background="@drawable/worksheet_border_line"/>

        <me.grantland.widget.AutofitTextView
            android:id="@+id/header_week_textView"
            android:layout_width="@dimen/zero_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingHorizontal="@dimen/month_worksheet_padding"
            android:maxLines="1"
            android:text="@string/week_column"
            android:layout_weight="2"
            android:textColor="@color/colorWhite"
            android:background="@drawable/worksheet_border_line"/>

        <me.grantland.widget.AutofitTextView
            android:id="@+id/header_workFlag_textView"
            android:layout_width="@dimen/zero_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingHorizontal="@dimen/month_worksheet_padding"
            android:maxLines="1"
            android:text="@string/work_flag_column"
            android:layout_weight="1.5"
            android:textColor="@color/colorWhite"
            android:background="@drawable/worksheet_border_line"/>

        <me.grantland.widget.AutofitTextView
            android:layout_width="@dimen/zero_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingHorizontal="@dimen/month_worksheet_padding"
            android:maxLines="1"
            android:text="@string/begin_time_column"
            android:layout_weight="3"
            android:textColor="@color/colorWhite"
            android:background="@drawable/worksheet_border_line"/>

        <me.grantland.widget.AutofitTextView
            android:id="@+id/header_endWork_textView"
            android:layout_width="@dimen/zero_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/month_worksheet_padding"
            android:text="@string/end_time_column"
            android:layout_weight="3"
            android:textColor="@color/colorWhite"
            android:background="@drawable/worksheet_border_line"/>

        <me.grantland.widget.AutofitTextView
            android:id="@+id/header_break_textView"
            android:layout_width="@dimen/zero_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/month_worksheet_padding"
            android:text="@string/break_time_column"
            android:layout_weight="2"
            android:textColor="@color/colorWhite"
            android:background="@drawable/worksheet_border_line"/>

        <me.grantland.widget.AutofitTextView
            android:id="@+id/header_workTime_textView"
            android:layout_width="@dimen/zero_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/month_worksheet_padding"
            android:text="@string/work_time_column"
            android:layout_weight="3"
            android:textColor="@color/colorWhite"
            android:background="@drawable/worksheet_border_line" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/header_note_textView"
            android:layout_width="@dimen/zero_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/month_worksheet_padding"
            android:text="@string/note_column"
            android:layout_weight="3.5"
            android:textColor="@color/colorWhite"
            android:background="@drawable/worksheet_border_line"/>

    </LinearLayout>

    <ListView
        android:id="@+id/worksheet_listView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_width"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_LinearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>